--- a/styles/main.css
+++ b/styles/main.css
@@ -1,54 +1,61 @@
 :root {
-    /* Quando se coloca -- na frente, cria-se uma variável */
-    /* Cada variável está recebendo uma cor como valor */
     --color-background: #F0F0F7;
     --color-primary-lighter: #9871F5;
-    --color-primary-light: #916bea;
-    --color-primary: #8257e5;
-    --color-primary-dark: #774dd6;
+    --color-primary-light: #916BEA;
+    --color-primary: #8257E5;
+    --color-primary-dark: #774DD6;
     --color-primary-darker: #6842c2;
-    --color-secondary: #04d361;
-    --color-secondary-dark: #04bf58;
-    --color-title-in-primary: white;
-    --color-text-in-primary: #d4c2ff;
-    --color-text-title: #32264d;
-    --color-text-complement: #9c98a6;
-    --color-text-base: #6a6180;
-    --color-line-in-white: #e6e6f0;
-    --color-input-background: #f8f8fc;
-    --color-button-text: #ffffff;
-    --color-box-base: #ffffff;
-    --color-box-footer: #fafafc;
-    --color-small-info: #c1bccc;
-
-    font-size: 60%; 
-}
-
-body{
-    background-color: var(--color-input-background);
-
-    /* Display */
-    display: flex; 
-    align-items: center;
-    justify-content: center;    
+    --color-secondary: #04D361;
+    --color-secondary-dark: #04BF58;
+    --color-title-in-primary: #FFFFFF;
+    --color-text-in-primary: #D4C2FF;
+    --color-text-title: #32264D;
+    --color-text-complement: #9C98A6;
+    --color-text-base: #6A6180;
+    --color-line-in-white: #E6E6F0;
+    --color-input-background: #F8F8FC;
+    --color-button-text: #FFFFFF;
+    --color-box-base: #FFFFFF;
+    --color-box-footer: #FAFAFC;
+    --color-small-info: #C1BCCC;
+    font-size: 60%; /* controle das medidas rem */
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html, body {
+    height: 100vh;
+}
+
+body {
+    background-color: var(--color-background);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+body,
+input,
+button,
+textarea {
+    font: 500 1.6rem Poppins;
+    /* font-weight: 500;
+    font-family: Poppins;
+    font-size: 1.6rem; */
+    color: var(--color-text-base);
 } 
-
-html, body{
-    height: 200px;
-}
-
-body, input, button, textarea {
-    font: 500 1.6rem Poppins; 
-    color: var(--color-text-base)
-}
 
 #container {
     width: 90vw;
     max-width: 700px;
+}
+
+@media(min-width: 700px) {
+    :root {
+        font-size: 62.5%; /* todo 1rem vai ser relativo a 10px */
+    }
 }
