--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,55 +1,49 @@
-#page-landing{
+#page-landing {
     background: var(--color-primary);
 }
 
-#page-landing #container{
+#page-landing #container {
     color: var(--color-text-in-primary);
 }
 
-.logo-container img{
-height: 10 rem;
+.logo-container img {
+    height: 10rem;
 }
 
-.logo-container{
+.logo-container {
     text-align: center;
     margin-bottom: 3.2rem;
 }
 
-.logo-container h2{
+.logo-container h2 {
     font-weight: 500;
     font-size: 3.6rem;
     line-height: 4.6rem;
     margin-top: 0.8rem;
 }
 
-.hero-image{
+.hero-image {
     width: 100%;
 }
 
-.buttons-container{
+.buttons-container {
     display: flex;
     justify-content: center;
-    margin:3.2rem 0;
+    margin: 3.2rem 0;
 }
 
-.buttons-container a{
+.buttons-container a {
     width: 30rem;
     height: 10.4rem;
-
-    border-radius: .8rem;
+    border-radius: 0.8rem;
     margin-right: 1.6rem;
-
     font: 700 2.4rem Archivo;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     text-decoration: none;
-
-    transition: background 0.2s;
-
     color: var(--color-button-text);
+    transition: background 0.2s;
 }
 
 .buttons-container a img {
@@ -74,25 +68,24 @@ height: 10 rem;
     background: var(--color-secondary-dark);
 }
 
-.total-connections {
+.total-conections {
     font-size: 1.8rem;
-
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.total-connections img{
+.total-conections img {
     margin-left: 0.8rem;
 }
 
-@media (max-width: 699px) {
+@media(max-width: 699px) {
     :root {
-        font-size: 40%; /* modificar as medidas rem */
+        font-size: 40%;
     }
 }
 
-@media (min-width: 1100px) {
+@media(min-width: 1100px) {
     #page-landing #container {
         max-width: 1100px;
         display: grid;
@@ -105,37 +98,31 @@ height: 10 rem;
         row-gap: 86px;
     }
 
-    .logo-container{
+    .logo-container {
         grid-area: proffy;
         text-align: initial;
         align-self: center;
         margin: 0;
     }
 
-    .logo-container img{
+    .logo-container img {
         height: 127px;
     }
 
-    .hero-image{
+    .hero-image {
         grid-area: image;
         height: 350px;
+        margin-top: 8%;
     }
 
-    .buttons-container{
+    .buttons-container {
         grid-area: button;
         justify-content: flex-start;
-        margin: 0;
     }
     
-    .total-connections{
+    .total-conections {
         grid-area: texting;
         justify-self: end;
         font-size: 1.2rem;
-    }
-
-    @media (min-width: 700px) {
-        :root {
-            font-size: 62.5%; /*Todo 1rem vai ser relativo a 10px */
-        }
     }
 }
