--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 
 html, body, #root {
   height: 100vh;
+  width: 100vw;
 }
 
 body {
@@ -33,8 +34,8 @@ textarea {
 }
 
 .container {
-  width: 90vw;
-  max-width: 700px;
+  width: 70vw;
+  height: 80vh;
 }
 
 @media (min-width: 700px) {
